# strings-and-files-lab

./: CMakeLists.txt  README.md  include.hpp  main.cpp
src/: setString.cpp  setString.hpp
src/arithmetic_expression/: arith_ex.cpp  arith_ex.hpp
src/cipher_ceaser/: cipher.cpp  cipher.hpp
src/from_arab_to_roman/: from_arab_to_roman.cpp  from_arab_to_roman.hpp
src/lucky_or_unlucky/: lucky_or_unlucky.cpp  lucky_or_unlucky.hpp
src/palindrome/: palindrome.cpp  palindrome.hpp
src/play_with_path/: pwp.cpp  pwp.hpp
src/regex_searching/: regex_searching.cpp  regex_searching.hpp
src/repl_symb/: repl.cpp
src/string_substring/: str_substr.cpp  str_substr.hpp
src/translit/: translit.cpp  translit.hpp
